fix z-index of layoutaside

--- a/app/frontend/stylesheets/layout/_layout.sass
+++ b/app/frontend/stylesheets/layout/_layout.sass
@@ -13,6 +13,7 @@
     background-color: $COLOR_KEY_DARK3
     overflow-x: hidden
     position: relative
+    z-index: var(--z-index-layout-aside)
     box-shadow: 2px 0 2px rgba(black, .2) inset
     body[data-search-mode="AdvancedSearchView"] &
       width: 0px
